# cle-sh

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: code-quality.yml  release.yml  tests.yml
clesh/: __init__.py  clesh.py
examples/: demo.py  demo_with_tree_explainer.py
tests/: conftest.py  test_clesh.py
